[gd_scene load_steps=3 format=3 uid="uid://ctjn8lxq37spg"]

[ext_resource type="Script" path="res://PlayerEditor.gd" id="1_72nkx"]
[ext_resource type="Texture2D" uid="uid://ctjarfp00afu3" path="res://cars/car1.png" id="2_2tjcv"]

[node name="PlayerEditor" type="Control"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_72nkx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470588, 0.470588, 0.470588, 1)

[node name="NameInput" type="LineEdit" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.531
offset_top = 5.0
offset_right = 33.5315
offset_bottom = 36.0
grow_horizontal = 2
placeholder_text = "name"
alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 10.0
offset_top = 40.0
offset_right = 50.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Background/ColorPickerButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -13.0
offset_right = -5.0
offset_bottom = 13.0
grow_vertical = 2
text = "color: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="CarDisplay" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -80.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_2tjcv")
expand_mode = 1
stretch_mode = 5

[node name="LeftButton" type="Button" parent="Background/CarDisplay"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -15.5
offset_right = -5.0
offset_bottom = 15.5
grow_vertical = 2
text = "<"

[node name="RightButton" type="Button" parent="Background/CarDisplay"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -15.5
offset_right = 23.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = ">"

[connection signal="pressed" from="Background/CarDisplay/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Background/CarDisplay/RightButton" to="." method="_on_right_button_pressed"]
